# campusiq

./: .gitignore  CONTRIBUTING.md  LICENSE  README.MD  README.md  campusiq.config.example.json  pyproject.toml  pyrightconfig.json
.kiro/: settings.json
docs/architecture/: ARCHITECTURE.md
docs/cms-plugin-guide/: README.md
docs/domain-configs/: README.md  corporate.json  k12.json  kindergarten.json  university.json
docs/experience-plugin-guide/: README.md
docs/idp-setup/: README.md
src/application/: main.py  schemas.py
src/application/lambdas/admin/: main.py
src/application/lambdas/assessment/: handler.py
src/application/lambdas/auth/: main.py
src/application/lambdas/content_adaptation/: handler.py
src/application/lambdas/courses/: main.py
src/application/lambdas/gap_detection/: handler.py
src/application/lambdas/parent/: main.py
src/application/lambdas/recommendation/: handler.py
src/application/lambdas/stream_processor/: handler.py
src/application/lambdas/students/: main.py
src/application/lambdas/teacher/: main.py
src/application/lambdas/tutor/: main.py
src/application/models/: __init__.py  config.py  course.py  gap.py  parent.py  progress.py  quiz.py  student.py
src/application/plugins/content_plugin_interface/: base.py
src/application/plugins/experience_plugin_interface/: base.py
src/application/routes/: admin.py  app.py  auth.py  courses.py  parent.py  students.py  teacher.py  tutor.py
src/application/services/: dynamodb.py
src/application/utils/: dynamodb_keys.py
(+2 files in other folders)
