[project]
name = "campusiq"
version = "0.1.0"
description = "AI assisted adaptive learning platform"
authors = [{name = "Anshul Saxena", email = "anshulsaxena14@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "aws-cdk-lib (>=2.243.0,<3.0.0)",
    "constructs (>=10.5.1,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
