[project]
name = "campusiq"
version = "0.1.0"
description = "AI assisted adaptive learning platform"
authors = [{name = "Anshul Saxena", email = "anshulsaxena14@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "aws-cdk-lib (>=2.243.0,<3.0.0)",
    "constructs (>=10.5.1,<11.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "mangum (>=0.17.0,<1.0.0)",
    "pydantic[email] (>=2.0.0,<3.0.0)",
    "boto3 (>=1.34.0,<2.0.0)",
    "aws-lambda-powertools (>=2.0.0,<3.0.0)",
    "uvicorn[standard] (>=0.27.0,<1.0.0)",
]
[project.optional-dependencies]
dev = [
    "pytest (>=7.0.0)",
    "pytest-asyncio (>=0.23.0)",
    "httpx (>=0.27.0)",
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
